--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,23 +1,39 @@
-{% if paginator.total_pages != 1 %}
-<div class="pagination clearfix mb1 mt4">
-  <div class="left">
-    {% if paginator.previous_page %}
-      {% if paginator.page == 2 %}
-        <a class="pagination-item" href="{{ site.baseurl }}/">{{ site.text.pagination.newer }}</a>
-      {% else %}
-        <a class="pagination-item" href="{{ paginator.previous_page_path }}">{{ site.text.pagination.newer }}</a>
+<ul class="pagination" role="navigation">
+    
+    
+    {% if paginator.total_pages <= 5 %}
+      {% assign first = 1 %}
+      {% assign last = paginator.total_pages %}
+    {% else %}
+      {% assign first = paginator.page | minus: 2 %}
+      {% if first < 1 %}
+        {% assign first = 1 %}
       {% endif %}
-    {% else %}
-      <span class="pagination-item disabled">{{ site.text.pagination.newer }}</span>
+        {% assign last = first | plus: 4 %}
+        {% if last > paginator.total_pages %}
+          {% assign last = paginator.total_pages %}
+        {% endif %}
     {% endif %}
-  </div>
-  <div class="right">
+    
+    {% if paginator.previous_page %}
+        <li id="page-prev"><a href="{{ site.url }}{{ paginator.previous_page_path }}"><span class="sr-only">Previous Page</span></a></li>
+    {% else %}
+        <li id="page-prev" class="disabled"><span class="sr-only">No Previous Page</span></li>
+    {% endif %}
+
+    {% for p in (first..last) %}
+      {% if p == paginator.page %}
+        <li class="page-number active">{{ p }}</li>
+        {% elsif p == 1 %}
+        <li class="page-number"><a href="{{ site.baseurl }}/blog/">{{ p }}</a></li>
+        {% else %}
+        <li class="page-number"><a href="{{ site.baseurl }}{{ site.paginate_path | replace: ':num', p }}">{{ p }}</a></li>
+      {% endif %}
+    {% endfor %}
+
     {% if paginator.next_page %}
-      <a class="pagination-item" href="{{ paginator.next_page_path }}">{{ site.text.pagination.older }}</a>
+        <li id="page-next"><a href="{{ site.url }}{{ paginator.next_page_path }}"><span class="sr-only">Next Page</span></a></li>
     {% else %}
-      <span class="pagination-item disabled">{{ site.text.pagination.older }}</span>
+        <li id="page-next" class="disabled"><span class="sr-only">No Next Page</span></li>
     {% endif %}
-  </div>
-  <div class="pagination-meta">Page {{ paginator.page }} of {{ paginator.total_pages }}</div>
-</div>
-{% endif %}
+</ul>
