--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -35,11 +35,11 @@
 }
 
 #page-prev
-  background: url(/assets/images/icon_pre.png) no-repeat center
+  background: url(/icon_pre.png) no-repeat center
   background-size: 6px 11px
 
 #page-next
-  background: url(/assets/images/icon_next.png) no-repeat center
+  background: url(/icon_next.png) no-repeat center
   background-size: 6px 11px
 
 .pagination a, .pagination .disabled {
